@@ -1,5 +1,7 @@
 ## HEAD:
 
+* Switch to gpg for encryption
+* S3 key names will have gpg appended when encrypted
 * Switch rvm to 1.9.3-p327
 
 ## 0.9.0:
